--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+
 button:focus, input:focus {
 	outline: none;
+}
+
+html {
+	font-size: 18px;
+	font-family: 'Outfit', sans-serif;
 }
